--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;a&#x69;l&#116;&#111;:&#x73;&#117;&#112;&#x70;&#111;r&#x74;&#64;&#118;&#105;v&#x61;r&#x61;&#100;&#x6f;&#x2e;&#99;&#111;&#x6d;">&#x73;&#117;&#112;&#x70;&#111;r&#x74;&#64;&#118;&#105;v&#x61;r&#x61;&#100;&#x6f;&#x2e;&#99;&#111;&#x6d;</a></li>
+<li>VivaRado <a href="&#109;&#x61;&#x69;&#108;&#x74;&#111;&#x3a;&#115;&#x75;&#112;&#x70;&#x6f;&#x72;&#116;&#x40;&#118;i&#118;&#97;&#114;&#97;&#x64;&#111;&#46;&#99;&#111;m">&#115;&#x75;&#112;&#x70;&#x6f;&#x72;&#116;&#x40;&#118;i&#118;&#97;&#114;&#97;&#x64;&#111;&#46;&#99;&#111;m</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#97;&#105;l&#116;&#111;&#58;&#109;&#106;&#108;&#97;&#x67;&#x61;&#116;&#x74;&#x75;&#x74;a&#64;&#103;m&#x61;&#105;&#x6c;&#x2e;&#99;&#x6f;&#x6d;">&#109;&#106;&#108;&#97;&#x67;&#x61;&#116;&#x74;&#x75;&#x74;a&#64;&#103;m&#x61;&#105;&#x6c;&#x2e;&#99;&#x6f;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#x61;&#x69;&#108;&#x74;&#111;:&#109;&#106;&#x6c;&#97;&#103;a&#x74;&#116;&#117;&#116;&#x61;&#64;g&#x6d;&#x61;&#105;&#x6c;&#46;&#99;&#x6f;&#x6d;">&#109;&#106;&#x6c;&#97;&#103;a&#x74;&#116;&#117;&#116;&#x61;&#64;g&#x6d;&#x61;&#105;&#x6c;&#46;&#99;&#x6f;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1361,7 +1361,7 @@ ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29
         3 SeC MO 3 bld:                                              done, des41, after des40, 3d
             MO bld Capital 39/39, SmallCase 45/45:                   done, des65, 2019-05-05,  5h
 
-    ADV-0003-0008-0001-0002 Advent SeC MO Integration of vectors:          des58, after des30, 3d
+    ADV-0003-0008-0001-0002 Advent SeC MO Integration of vectors:  active, des58, after des30, 3d
         MO thn Capitals:                                             done, des59, 2019-05-07,  5h
 
     ADV-0003-0008-0001-0001 SeC MG:                                        des32, after des58, 3d
@@ -1626,7 +1626,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#97;&#105;&#108;&#x74;&#111;&#58;&#115;&#x75;&#x70;&#x70;&#x6f;&#x72;&#x74;&#64;&#118;&#105;&#118;&#97;&#114;&#x61;&#100;&#x6f;&#46;&#99;&#x6f;&#109;">&#115;&#x75;&#x70;&#x70;&#x6f;&#x72;&#x74;&#64;&#118;&#105;&#118;&#97;&#114;&#x61;&#100;&#x6f;&#46;&#99;&#x6f;&#109;</a></li>
+<li><a href="&#109;&#x61;&#105;&#108;&#x74;&#x6f;&#x3a;&#115;&#x75;&#112;&#112;&#x6f;r&#x74;&#64;&#x76;&#x69;&#x76;&#x61;&#114;&#97;&#100;&#111;&#x2e;&#x63;&#x6f;m">&#115;&#x75;&#112;&#112;&#x6f;r&#x74;&#64;&#x76;&#x69;&#x76;&#x61;&#114;&#97;&#100;&#111;&#x2e;&#x63;&#x6f;m</a></li>
 </ul></li>
 </ul></li>
 </ul>
