--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#x61;&#x69;&#108;&#x74;&#111;&#x3a;&#115;&#x75;&#112;&#x70;&#x6f;&#x72;&#116;&#x40;&#118;i&#118;&#97;&#114;&#97;&#x64;&#111;&#46;&#99;&#111;m">&#115;&#x75;&#112;&#x70;&#x6f;&#x72;&#116;&#x40;&#118;i&#118;&#97;&#114;&#97;&#x64;&#111;&#46;&#99;&#111;m</a></li>
+<li>VivaRado <a href="&#109;&#x61;&#105;&#x6c;&#116;&#x6f;&#x3a;&#115;&#117;&#x70;&#112;&#x6f;&#114;&#x74;&#64;&#118;&#x69;&#x76;&#x61;&#114;&#97;&#x64;&#111;&#46;&#x63;&#x6f;m">&#115;&#117;&#x70;&#112;&#x6f;&#114;&#x74;&#64;&#118;&#x69;&#x76;&#x61;&#114;&#97;&#x64;&#111;&#46;&#x63;&#x6f;m</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#x61;&#x69;&#108;&#x74;&#111;:&#109;&#106;&#x6c;&#97;&#103;a&#x74;&#116;&#117;&#116;&#x61;&#64;g&#x6d;&#x61;&#105;&#x6c;&#46;&#99;&#x6f;&#x6d;">&#109;&#106;&#x6c;&#97;&#103;a&#x74;&#116;&#117;&#116;&#x61;&#64;g&#x6d;&#x61;&#105;&#x6c;&#46;&#99;&#x6f;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#97;&#x69;&#108;&#116;&#x6f;&#58;&#x6d;&#x6a;&#108;&#97;&#103;&#97;&#116;&#x74;&#x75;&#116;&#97;&#64;&#x67;&#109;&#97;&#105;&#x6c;&#x2e;&#x63;&#111;&#109;">&#x6d;&#x6a;&#108;&#97;&#103;&#97;&#116;&#x74;&#x75;&#116;&#97;&#64;&#x67;&#109;&#97;&#105;&#x6c;&#x2e;&#x63;&#111;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1626,7 +1626,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#x61;&#105;&#108;&#x74;&#x6f;&#x3a;&#115;&#x75;&#112;&#112;&#x6f;r&#x74;&#64;&#x76;&#x69;&#x76;&#x61;&#114;&#97;&#100;&#111;&#x2e;&#x63;&#x6f;m">&#115;&#x75;&#112;&#112;&#x6f;r&#x74;&#64;&#x76;&#x69;&#x76;&#x61;&#114;&#97;&#100;&#111;&#x2e;&#x63;&#x6f;m</a></li>
+<li><a href="&#x6d;&#x61;&#105;&#108;&#x74;&#x6f;&#58;&#x73;&#117;&#x70;p&#111;&#114;&#x74;&#64;v&#x69;&#118;&#x61;&#x72;&#x61;&#x64;&#111;&#x2e;&#x63;o&#109;">&#x73;&#117;&#x70;p&#111;&#114;&#x74;&#64;v&#x69;&#118;&#x61;&#x72;&#x61;&#x64;&#111;&#x2e;&#x63;o&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
