--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.011 | 2019/05/08</title>
+		<title>VRD | Advent | 3.012 | 2019/05/08</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#x61;&#105;&#108;&#x74;&#111;:&#115;&#x75;p&#112;&#x6f;&#x72;&#116;&#x40;&#x76;&#105;&#118;&#x61;&#114;&#97;d&#x6f;.&#99;&#111;&#x6d;">&#115;&#x75;p&#112;&#x6f;&#x72;&#116;&#x40;&#x76;&#105;&#118;&#x61;&#114;&#97;d&#x6f;.&#99;&#111;&#x6d;</a></li>
+<li>VivaRado <a href="&#109;&#x61;&#105;&#x6c;&#x74;&#x6f;&#x3a;&#115;&#x75;&#112;&#x70;&#x6f;&#x72;&#x74;&#64;&#118;&#105;&#x76;&#x61;r&#x61;&#100;&#111;&#x2e;&#x63;&#111;&#109;">&#115;&#x75;&#112;&#x70;&#x6f;&#x72;&#x74;&#64;&#118;&#105;&#x76;&#x61;r&#x61;&#100;&#111;&#x2e;&#x63;&#111;&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#97;&#x69;&#108;&#116;&#111;&#x3a;m&#106;&#x6c;&#x61;&#x67;&#97;&#116;&#116;&#117;&#116;&#x61;&#64;&#103;&#x6d;&#x61;&#x69;&#x6c;&#46;&#99;&#111;&#109;">m&#106;&#x6c;&#x61;&#x67;&#97;&#116;&#116;&#117;&#116;&#x61;&#64;&#103;&#x6d;&#x61;&#x69;&#x6c;&#46;&#99;&#111;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#97;&#105;&#108;&#116;&#111;&#58;m&#x6a;&#108;a&#103;&#97;t&#116;&#117;&#116;&#97;&#x40;&#x67;&#109;&#97;&#x69;&#108;&#x2e;&#99;&#111;&#109;">m&#x6a;&#108;a&#103;&#97;t&#116;&#117;&#116;&#97;&#x40;&#x67;&#109;&#97;&#x69;&#108;&#x2e;&#99;&#111;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1687,7 +1687,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="m&#97;&#105;&#x6c;&#116;&#x6f;&#x3a;&#115;&#117;&#112;&#x70;&#111;&#114;&#x74;&#64;&#x76;&#105;&#118;&#x61;&#x72;&#x61;&#100;&#111;&#46;&#x63;&#111;&#x6d;">&#115;&#117;&#112;&#x70;&#111;&#114;&#x74;&#64;&#x76;&#105;&#118;&#x61;&#x72;&#x61;&#100;&#111;&#46;&#x63;&#111;&#x6d;</a></li>
+<li><a href="&#x6d;a&#x69;&#108;&#116;&#x6f;&#x3a;&#x73;&#117;p&#x70;&#x6f;&#x72;&#x74;&#64;v&#x69;&#x76;&#x61;&#x72;&#x61;&#100;&#111;&#46;&#99;&#111;&#x6d;">&#x73;&#117;p&#x70;&#x6f;&#x72;&#x74;&#64;v&#x69;&#x76;&#x61;&#x72;&#x61;&#100;&#111;&#46;&#99;&#111;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
