--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.012 | 2019/05/08</title>
+		<title>VRD | Advent | 3.013 | 2019/05/09</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#x61;&#105;&#x6c;&#x74;&#x6f;&#x3a;&#115;&#x75;&#112;&#x70;&#x6f;&#x72;&#x74;&#64;&#118;&#105;&#x76;&#x61;r&#x61;&#100;&#111;&#x2e;&#x63;&#111;&#109;">&#115;&#x75;&#112;&#x70;&#x6f;&#x72;&#x74;&#64;&#118;&#105;&#x76;&#x61;r&#x61;&#100;&#111;&#x2e;&#x63;&#111;&#109;</a></li>
+<li>VivaRado <a href="&#x6d;&#97;&#x69;&#x6c;&#116;&#x6f;:&#x73;&#x75;&#x70;&#112;&#x6f;&#x72;t&#64;&#118;i&#118;&#97;r&#97;&#x64;&#111;&#46;&#x63;&#x6f;&#x6d;">&#x73;&#x75;&#x70;&#112;&#x6f;&#x72;t&#64;&#118;i&#118;&#97;r&#97;&#x64;&#111;&#46;&#x63;&#x6f;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#97;&#105;&#108;&#116;&#111;&#58;m&#x6a;&#108;a&#103;&#97;t&#116;&#117;&#116;&#97;&#x40;&#x67;&#109;&#97;&#x69;&#108;&#x2e;&#99;&#111;&#109;">m&#x6a;&#108;a&#103;&#97;t&#116;&#117;&#116;&#97;&#x40;&#x67;&#109;&#97;&#x69;&#108;&#x2e;&#99;&#111;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#97;&#105;&#x6c;&#x74;o:&#x6d;&#x6a;&#108;&#97;&#x67;&#x61;&#x74;&#x74;&#117;&#116;&#x61;&#x40;&#x67;&#x6d;&#97;&#105;&#x6c;&#x2e;&#x63;&#111;&#109;">&#x6d;&#x6a;&#108;&#97;&#x67;&#x61;&#x74;&#x74;&#117;&#116;&#x61;&#x40;&#x67;&#x6d;&#97;&#105;&#x6c;&#x2e;&#x63;&#111;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1408,7 +1408,7 @@ ADV-0004-0008-0001 Advent 4 Script Extension Cyrillic (SeC) Planning:      des28
 #
 section Advent 3 SE Cyrillic
 
-ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29, 2019-04-27, 15d
+ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29, 2019-04-27, 21d
     ADV-0003-0008-0001-0001 Advent SeC MO:                           done, des30, 2019-04-27,  9d
         SeC MO 1 reg (04/27 to 04/30):                               done, des39, 2019-04-27,  3d
             MO reg Capital:                                          done, des31, 2019-04-27,  5h
@@ -1421,9 +1421,13 @@ ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29
         3 SeC MO 3 bld:                                              done, des41, after des40, 3d
             MO bld Capital 39/39, SmallCase 45/45:                   done, des65, 2019-05-05,  5h
 
-    ADV-0003-0008-0001-0002 Advent SeC MO Integration of vectors:  active, des58, after des30, 3d
-        MO thn Capitals:                                             done, des59, 2019-05-07,  5h
-        MO thn LowerCase:                                            done, des62, 2019-05-08,  5h
+    ADV-0003-0008-0001-0002 Advent SeC MO Integration of vectors:  active, des58, after des30, 9d
+        3 SeC MO 1 thn:                                              done, des64, after des30, 3d
+            MO thn Capitals:                                         done, des59, 2019-05-07,  5h
+            MO thn LowerCase:                                        done, des62, 2019-05-08,  5h
+            MO thn Complete:                                         done, des63, 2019-05-09,  5h
+        3 SeC MO 2 reg:                                            active, des65, after des64, 3d
+        3 SeC MO 2 bld:                                                    des66, after des65, 3d
 
     ADV-0003-0008-0001-0001 SeC MG:                                        des32, after des58, 3d
         3 SeC MG 1 reg_it:                                                 des42, after des58, 1d
@@ -1687,7 +1691,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;a&#x69;&#108;&#116;&#x6f;&#x3a;&#x73;&#117;p&#x70;&#x6f;&#x72;&#x74;&#64;v&#x69;&#x76;&#x61;&#x72;&#x61;&#100;&#111;&#46;&#99;&#111;&#x6d;">&#x73;&#117;p&#x70;&#x6f;&#x72;&#x74;&#64;v&#x69;&#x76;&#x61;&#x72;&#x61;&#100;&#111;&#46;&#99;&#111;&#x6d;</a></li>
+<li><a href="&#109;&#x61;i&#x6c;&#x74;&#x6f;&#58;s&#x75;&#112;&#x70;&#x6f;&#114;&#116;&#64;&#118;&#x69;&#x76;&#97;r&#x61;&#100;&#111;.&#x63;&#111;&#109;">s&#x75;&#112;&#x70;&#x6f;&#114;&#116;&#64;&#118;&#x69;&#x76;&#97;r&#x61;&#100;&#111;.&#x63;&#111;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
