--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#97;&#x69;&#x6c;&#116;&#x6f;:&#x73;&#x75;&#x70;&#112;&#x6f;&#x72;t&#64;&#118;i&#118;&#97;r&#97;&#x64;&#111;&#46;&#x63;&#x6f;&#x6d;">&#x73;&#x75;&#x70;&#112;&#x6f;&#x72;t&#64;&#118;i&#118;&#97;r&#97;&#x64;&#111;&#46;&#x63;&#x6f;&#x6d;</a></li>
+<li>VivaRado <a href="&#x6d;&#x61;&#105;l&#116;o&#58;&#x73;&#117;&#112;&#x70;&#111;r&#116;&#x40;&#118;&#x69;&#x76;&#97;&#114;&#97;&#x64;&#x6f;&#46;&#x63;&#x6f;&#x6d;">&#x73;&#117;&#112;&#x70;&#111;r&#116;&#x40;&#118;&#x69;&#x76;&#97;&#114;&#97;&#x64;&#x6f;&#46;&#x63;&#x6f;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#97;&#105;&#x6c;&#x74;o:&#x6d;&#x6a;&#108;&#97;&#x67;&#x61;&#x74;&#x74;&#117;&#116;&#x61;&#x40;&#x67;&#x6d;&#97;&#105;&#x6c;&#x2e;&#x63;&#111;&#109;">&#x6d;&#x6a;&#108;&#97;&#x67;&#x61;&#x74;&#x74;&#117;&#116;&#x61;&#x40;&#x67;&#x6d;&#97;&#105;&#x6c;&#x2e;&#x63;&#111;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#97;&#x69;&#108;&#116;&#x6f;&#x3a;&#109;&#x6a;l&#97;&#103;&#97;&#x74;&#x74;&#x75;&#116;&#x61;&#64;&#103;&#109;&#x61;&#x69;&#x6c;&#46;&#99;o&#x6d;">&#109;&#x6a;l&#97;&#103;&#97;&#x74;&#x74;&#x75;&#116;&#x61;&#64;&#103;&#109;&#x61;&#x69;&#x6c;&#46;&#99;o&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1691,7 +1691,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#x61;i&#x6c;&#x74;&#x6f;&#58;s&#x75;&#112;&#x70;&#x6f;&#114;&#116;&#64;&#118;&#x69;&#x76;&#97;r&#x61;&#100;&#111;.&#x63;&#111;&#109;">s&#x75;&#112;&#x70;&#x6f;&#114;&#116;&#64;&#118;&#x69;&#x76;&#97;r&#x61;&#100;&#111;.&#x63;&#111;&#109;</a></li>
+<li><a href="&#x6d;&#97;&#105;&#108;&#x74;&#111;&#x3a;&#115;&#x75;&#112;p&#x6f;&#114;&#116;&#x40;&#x76;&#x69;&#x76;&#x61;&#x72;&#x61;&#100;&#111;&#46;&#x63;&#x6f;&#x6d;">&#115;&#x75;&#112;p&#x6f;&#114;&#116;&#x40;&#x76;&#x69;&#x76;&#x61;&#x72;&#x61;&#100;&#111;&#46;&#x63;&#x6f;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
