reg MO integration for SeC 16/39 Capitals

--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#x61;&#105;l&#116;o&#58;&#x73;&#117;&#112;&#x70;&#111;r&#116;&#x40;&#118;&#x69;&#x76;&#97;&#114;&#97;&#x64;&#x6f;&#46;&#x63;&#x6f;&#x6d;">&#x73;&#117;&#112;&#x70;&#111;r&#116;&#x40;&#118;&#x69;&#x76;&#97;&#114;&#97;&#x64;&#x6f;&#46;&#x63;&#x6f;&#x6d;</a></li>
+<li>VivaRado <a href="&#109;&#97;&#105;&#108;&#x74;&#111;:&#x73;&#x75;&#x70;&#x70;&#111;&#x72;&#x74;&#64;&#118;&#105;&#118;&#x61;&#114;&#97;&#100;&#111;&#x2e;&#x63;&#111;&#109;">&#x73;&#x75;&#x70;&#x70;&#111;&#x72;&#x74;&#64;&#118;&#105;&#118;&#x61;&#114;&#97;&#100;&#111;&#x2e;&#x63;&#111;&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#97;&#x69;&#108;&#116;&#x6f;&#x3a;&#109;&#x6a;l&#97;&#103;&#97;&#x74;&#x74;&#x75;&#116;&#x61;&#64;&#103;&#109;&#x61;&#x69;&#x6c;&#46;&#99;o&#x6d;">&#109;&#x6a;l&#97;&#103;&#97;&#x74;&#x74;&#x75;&#116;&#x61;&#64;&#103;&#109;&#x61;&#x69;&#x6c;&#46;&#99;o&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#97;&#105;&#108;&#x74;&#111;&#58;&#x6d;&#x6a;&#108;&#97;&#103;&#97;&#116;&#x74;&#117;&#x74;&#97;&#64;&#103;ma&#x69;&#x6c;&#x2e;&#x63;&#x6f;&#109;">&#x6d;&#x6a;&#108;&#97;&#103;&#97;&#116;&#x74;&#117;&#x74;&#97;&#64;&#103;ma&#x69;&#x6c;&#x2e;&#x63;&#x6f;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1425,8 +1425,9 @@ ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29
         3 SeC MO 1 thn:                                              done, des64, after des30, 3d
             MO thn Capitals:                                         done, des59, 2019-05-07,  5h
             MO thn LowerCase:                                        done, des62, 2019-05-08,  5h
-            MO thn Complete:                                         done, des63, 2019-05-09,  5h
+            MO thn Complete:                                         done, des63, 2019-05-09,  6h
         3 SeC MO 2 reg:                                            active, des65, after des64, 3d
+            MO reg 16/39 Capitals:                                   done, des59, 2019-05-07,  6h
         3 SeC MO 2 bld:                                                    des66, after des65, 3d
 
     ADV-0003-0008-0001-0001 SeC MG:                                        des32, after des58, 3d
@@ -1691,7 +1692,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#97;&#105;&#108;&#x74;&#111;&#x3a;&#115;&#x75;&#112;p&#x6f;&#114;&#116;&#x40;&#x76;&#x69;&#x76;&#x61;&#x72;&#x61;&#100;&#111;&#46;&#x63;&#x6f;&#x6d;">&#115;&#x75;&#112;p&#x6f;&#114;&#116;&#x40;&#x76;&#x69;&#x76;&#x61;&#x72;&#x61;&#100;&#111;&#46;&#x63;&#x6f;&#x6d;</a></li>
+<li><a href="&#109;&#x61;&#x69;&#x6c;&#x74;&#x6f;:&#x73;&#x75;&#112;&#112;&#111;r&#x74;&#x40;&#118;&#x69;&#x76;&#97;&#114;&#x61;&#100;&#111;&#x2e;&#x63;o&#109;">&#x73;&#x75;&#112;&#112;&#111;r&#x74;&#x40;&#118;&#x69;&#x76;&#97;&#114;&#x61;&#100;&#111;&#x2e;&#x63;o&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
