reg MO integration for SeC Capitals done

--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.013 | 2019/05/09</title>
+		<title>VRD | Advent | 3.013 | 2019/05/10</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#97;&#105;&#108;&#x74;&#111;:&#x73;&#x75;&#x70;&#x70;&#111;&#x72;&#x74;&#64;&#118;&#105;&#118;&#x61;&#114;&#97;&#100;&#111;&#x2e;&#x63;&#111;&#109;">&#x73;&#x75;&#x70;&#x70;&#111;&#x72;&#x74;&#64;&#118;&#105;&#118;&#x61;&#114;&#97;&#100;&#111;&#x2e;&#x63;&#111;&#109;</a></li>
+<li>VivaRado <a href="m&#x61;&#105;&#108;&#x74;&#x6f;&#58;&#x73;u&#112;&#x70;&#x6f;&#x72;t&#x40;&#x76;&#x69;&#118;&#x61;&#x72;&#x61;&#100;&#x6f;.&#x63;&#111;&#x6d;">&#x73;u&#112;&#x70;&#x6f;&#x72;t&#x40;&#x76;&#x69;&#118;&#x61;&#x72;&#x61;&#100;&#x6f;.&#x63;&#111;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#97;&#105;&#108;&#x74;&#111;&#58;&#x6d;&#x6a;&#108;&#97;&#103;&#97;&#116;&#x74;&#117;&#x74;&#97;&#64;&#103;ma&#x69;&#x6c;&#x2e;&#x63;&#x6f;&#109;">&#x6d;&#x6a;&#108;&#97;&#103;&#97;&#116;&#x74;&#117;&#x74;&#97;&#64;&#103;ma&#x69;&#x6c;&#x2e;&#x63;&#x6f;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#97;&#x69;l&#116;o:&#109;&#x6a;&#108;&#x61;g&#x61;&#116;&#116;&#x75;&#x74;&#x61;&#64;&#x67;&#x6d;&#x61;&#105;l&#x2e;&#99;&#111;&#x6d;">&#109;&#x6a;&#108;&#x61;g&#x61;&#116;&#116;&#x75;&#x74;&#x61;&#64;&#x67;&#x6d;&#x61;&#105;l&#x2e;&#99;&#111;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1427,7 +1427,8 @@ ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29
             MO thn LowerCase:                                        done, des62, 2019-05-08,  5h
             MO thn Complete:                                         done, des63, 2019-05-09,  6h
         3 SeC MO 2 reg:                                            active, des65, after des64, 3d
-            MO reg 16/39 Capitals:                                   done, des59, 2019-05-07,  6h
+            MO reg 16/39 Capitals:                                   done, des59, 2019-05-09,  6h
+            MO reg Capitals:                                         done, des67, 2019-05-10,  6h
         3 SeC MO 2 bld:                                                    des66, after des65, 3d
 
     ADV-0003-0008-0001-0001 SeC MG:                                        des32, after des58, 3d
@@ -1692,7 +1693,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#x61;&#x69;&#x6c;&#x74;&#x6f;:&#x73;&#x75;&#112;&#112;&#111;r&#x74;&#x40;&#118;&#x69;&#x76;&#97;&#114;&#x61;&#100;&#111;&#x2e;&#x63;o&#109;">&#x73;&#x75;&#112;&#112;&#111;r&#x74;&#x40;&#118;&#x69;&#x76;&#97;&#114;&#x61;&#100;&#111;&#x2e;&#x63;o&#109;</a></li>
+<li><a href="&#109;&#97;&#x69;&#108;&#x74;&#111;&#58;s&#117;&#112;&#x70;&#111;&#x72;&#x74;&#x40;&#x76;&#x69;&#x76;a&#x72;&#x61;&#x64;&#111;&#46;&#99;o&#109;">s&#117;&#112;&#x70;&#111;&#x72;&#x74;&#x40;&#x76;&#x69;&#x76;a&#x72;&#x61;&#x64;&#111;&#46;&#99;o&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
