--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.013 | 2019/05/10</title>
+		<title>VRD | Advent | 3.014 | 2019/05/10</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="m&#x61;&#105;&#108;&#x74;&#x6f;&#58;&#x73;u&#112;&#x70;&#x6f;&#x72;t&#x40;&#x76;&#x69;&#118;&#x61;&#x72;&#x61;&#100;&#x6f;.&#x63;&#111;&#x6d;">&#x73;u&#112;&#x70;&#x6f;&#x72;t&#x40;&#x76;&#x69;&#118;&#x61;&#x72;&#x61;&#100;&#x6f;.&#x63;&#111;&#x6d;</a></li>
+<li>VivaRado <a href="&#x6d;&#x61;i&#x6c;&#x74;&#111;&#58;&#x73;&#117;pp&#111;&#x72;t&#64;&#x76;&#105;&#x76;&#97;&#114;&#x61;&#x64;o&#x2e;&#x63;&#x6f;&#x6d;">&#x73;&#117;pp&#111;&#x72;t&#64;&#x76;&#105;&#x76;&#97;&#114;&#x61;&#x64;o&#x2e;&#x63;&#x6f;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#97;&#x69;l&#116;o:&#109;&#x6a;&#108;&#x61;g&#x61;&#116;&#116;&#x75;&#x74;&#x61;&#64;&#x67;&#x6d;&#x61;&#105;l&#x2e;&#99;&#111;&#x6d;">&#109;&#x6a;&#108;&#x61;g&#x61;&#116;&#116;&#x75;&#x74;&#x61;&#64;&#x67;&#x6d;&#x61;&#105;l&#x2e;&#99;&#111;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#97;&#x69;&#x6c;&#x74;&#x6f;&#58;m&#106;l&#x61;&#103;&#x61;&#x74;&#116;&#x75;&#x74;a&#64;&#103;&#x6d;&#x61;&#105;&#108;&#46;&#99;&#111;&#x6d;">m&#106;l&#x61;&#103;&#x61;&#x74;&#116;&#x75;&#x74;a&#64;&#103;&#x6d;&#x61;&#105;&#108;&#46;&#99;&#111;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1693,7 +1693,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#97;&#x69;&#108;&#x74;&#111;&#58;s&#117;&#112;&#x70;&#111;&#x72;&#x74;&#x40;&#x76;&#x69;&#x76;a&#x72;&#x61;&#x64;&#111;&#46;&#99;o&#109;">s&#117;&#112;&#x70;&#111;&#x72;&#x74;&#x40;&#x76;&#x69;&#x76;a&#x72;&#x61;&#x64;&#111;&#46;&#99;o&#109;</a></li>
+<li><a href="&#x6d;&#x61;&#105;l&#116;&#111;:&#115;&#117;&#x70;&#x70;&#x6f;&#x72;&#x74;&#64;&#x76;&#x69;v&#x61;&#114;&#97;&#x64;o&#46;&#x63;&#111;&#109;">&#115;&#117;&#x70;&#x70;&#x6f;&#x72;&#x74;&#64;&#x76;&#x69;v&#x61;&#114;&#97;&#x64;o&#46;&#x63;&#111;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
