--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#x61;i&#x6c;&#x74;&#111;&#58;&#x73;&#117;pp&#111;&#x72;t&#64;&#x76;&#105;&#x76;&#97;&#114;&#x61;&#x64;o&#x2e;&#x63;&#x6f;&#x6d;">&#x73;&#117;pp&#111;&#x72;t&#64;&#x76;&#105;&#x76;&#97;&#114;&#x61;&#x64;o&#x2e;&#x63;&#x6f;&#x6d;</a></li>
+<li>VivaRado <a href="&#109;&#x61;&#105;&#x6c;&#116;&#111;&#x3a;&#x73;&#117;&#x70;&#112;&#111;&#x72;&#116;&#64;&#x76;&#105;&#x76;&#x61;&#114;a&#x64;&#x6f;&#46;&#99;&#x6f;&#109;">&#x73;&#117;&#x70;&#112;&#111;&#x72;&#116;&#64;&#x76;&#105;&#x76;&#x61;&#114;a&#x64;&#x6f;&#46;&#99;&#x6f;&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#97;&#x69;&#x6c;&#x74;&#x6f;&#58;m&#106;l&#x61;&#103;&#x61;&#x74;&#116;&#x75;&#x74;a&#64;&#103;&#x6d;&#x61;&#105;&#108;&#46;&#99;&#111;&#x6d;">m&#106;l&#x61;&#103;&#x61;&#x74;&#116;&#x75;&#x74;a&#64;&#103;&#x6d;&#x61;&#105;&#108;&#46;&#99;&#111;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#x61;&#105;&#108;&#x74;&#x6f;&#x3a;&#109;&#x6a;&#108;&#x61;g&#97;t&#116;&#x75;&#x74;&#97;&#x40;&#x67;&#109;&#97;&#x69;l&#46;&#x63;o&#x6d;">&#109;&#x6a;&#108;&#x61;g&#97;t&#116;&#x75;&#x74;&#97;&#x40;&#x67;&#109;&#97;&#x69;l&#46;&#x63;o&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1693,7 +1693,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#x61;&#105;l&#116;&#111;:&#115;&#117;&#x70;&#x70;&#x6f;&#x72;&#x74;&#64;&#x76;&#x69;v&#x61;&#114;&#97;&#x64;o&#46;&#x63;&#111;&#109;">&#115;&#117;&#x70;&#x70;&#x6f;&#x72;&#x74;&#64;&#x76;&#x69;v&#x61;&#114;&#97;&#x64;o&#46;&#x63;&#111;&#109;</a></li>
+<li><a href="m&#x61;&#x69;&#x6c;&#x74;&#x6f;&#x3a;&#115;&#x75;&#x70;&#112;&#111;&#114;&#x74;&#64;&#118;&#x69;&#x76;&#97;&#114;&#x61;&#x64;&#111;&#46;c&#111;&#109;">&#115;&#x75;&#x70;&#112;&#111;&#114;&#x74;&#64;&#118;&#x69;&#x76;&#97;&#114;&#x61;&#x64;&#111;&#46;c&#111;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
