--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.014 | 2019/05/10</title>
+		<title>VRD | Advent | 3.015 | 2019/05/11</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#x61;&#105;&#x6c;&#116;&#111;&#x3a;&#x73;&#117;&#x70;&#112;&#111;&#x72;&#116;&#64;&#x76;&#105;&#x76;&#x61;&#114;a&#x64;&#x6f;&#46;&#99;&#x6f;&#109;">&#x73;&#117;&#x70;&#112;&#111;&#x72;&#116;&#64;&#x76;&#105;&#x76;&#x61;&#114;a&#x64;&#x6f;&#46;&#99;&#x6f;&#109;</a></li>
+<li>VivaRado <a href="&#x6d;&#x61;&#105;l&#x74;&#111;&#58;&#115;&#117;&#112;&#112;&#x6f;&#114;&#x74;&#64;&#118;&#105;&#118;&#x61;&#114;a&#x64;&#x6f;&#46;&#99;&#111;&#109;">&#115;&#117;&#112;&#112;&#x6f;&#114;&#x74;&#64;&#118;&#105;&#118;&#x61;&#114;a&#x64;&#x6f;&#46;&#99;&#111;&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#x61;&#105;&#108;&#x74;&#x6f;&#x3a;&#109;&#x6a;&#108;&#x61;g&#97;t&#116;&#x75;&#x74;&#97;&#x40;&#x67;&#109;&#97;&#x69;l&#46;&#x63;o&#x6d;">&#109;&#x6a;&#108;&#x61;g&#97;t&#116;&#x75;&#x74;&#97;&#x40;&#x67;&#109;&#97;&#x69;l&#46;&#x63;o&#x6d;</a></li>
+<li>Michael LaGattuta <a href="m&#97;&#x69;&#x6c;&#116;o&#x3a;&#x6d;&#x6a;&#108;&#x61;&#x67;&#x61;&#116;&#116;&#117;&#116;a&#64;&#103;&#109;&#97;&#105;&#108;&#x2e;&#99;&#111;&#x6d;">&#x6d;&#x6a;&#108;&#x61;&#x67;&#x61;&#116;&#116;&#117;&#116;a&#64;&#103;&#109;&#97;&#105;&#108;&#x2e;&#99;&#111;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1426,10 +1426,11 @@ ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29
             MO thn Capitals:                                         done, des59, 2019-05-07,  5h
             MO thn LowerCase:                                        done, des62, 2019-05-08,  5h
             MO thn Complete:                                         done, des63, 2019-05-09,  6h
-        3 SeC MO 2 reg:                                            active, des65, after des64, 3d
+        3 SeC MO 2 reg:                                              done, des65, after des64, 3d
             MO reg 16/39 Capitals:                                   done, des59, 2019-05-09,  6h
             MO reg Capitals:                                         done, des67, 2019-05-10,  6h
-        3 SeC MO 2 bld:                                                    des66, after des65, 3d
+            MO reg Complete:                                         done, des68, 2019-05-11,  8h
+        3 SeC MO 2 bld:                                            active, des66, after des65, 3d
 
     ADV-0003-0008-0001-0001 SeC MG:                                        des32, after des58, 3d
         3 SeC MG 1 reg_it:                                                 des42, after des58, 1d
@@ -1693,7 +1694,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="m&#x61;&#x69;&#x6c;&#x74;&#x6f;&#x3a;&#115;&#x75;&#x70;&#112;&#111;&#114;&#x74;&#64;&#118;&#x69;&#x76;&#97;&#114;&#x61;&#x64;&#111;&#46;c&#111;&#109;">&#115;&#x75;&#x70;&#112;&#111;&#114;&#x74;&#64;&#118;&#x69;&#x76;&#97;&#114;&#x61;&#x64;&#111;&#46;c&#111;&#109;</a></li>
+<li><a href="&#x6d;&#97;&#105;&#x6c;&#x74;o:&#x73;&#117;&#112;&#x70;&#111;&#x72;&#x74;&#x40;&#x76;&#105;&#118;&#x61;&#x72;a&#100;o&#x2e;c&#x6f;&#x6d;">&#x73;&#117;&#112;&#x70;&#111;&#x72;&#x74;&#x40;&#x76;&#105;&#118;&#x61;&#x72;a&#100;o&#x2e;c&#x6f;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
