SeC Preview reg and thn

--- a/PREVIEW/index_SeC.html
+++ b/PREVIEW/index_SeC.html
@@ -18,13 +18,43 @@
 			<div id="typefaces">
 				<div class="ajax-wrapper">
 					<div class="typeface" id="advent_thnregbld">
-						<h2 class="sec">Advent Pro SE Cyrillic 2019</h2>
-						<p class="description sec">The Advent 3 Script Extension for Cyrillic.</p>
+						<h2 class="sec_reg">Advent Pro SE Cyrillic 2019</h2>
+						<p class="description sec_reg">The Advent 3 Script Extension for Cyrillic.</p>
 						<div class="content">
 							<div class="fonts">
 								<div class="font">
 									<figure>
-										<div class="sample M L XL" spellcheck="false" style="font-family: 'AdventProSeC';">
+										<div class="sample M L XL" spellcheck="false" style="font-family: 'AdventProSeC_thn';">
+											<span class="info_perm">Russian pangram:</span>
+											<span>
+												Съешь ещё этих мягких французских булок да выпей же чаю
+											</span>
+											<hr>
+											<span class="info_perm">Serbian pangram:</span>
+											<span>
+												Чешће цeђење мрeжастим џаком побољшава фертилизацију генских хибрида.
+											</span>
+											<hr>
+											<span class="info_perm">Bulgarian pangram:</span>
+											<span>
+												Под южно дърво, цъфтящо в синьо, бягаше малко пухкаво зайче.
+											</span>
+											<hr>
+											<span class="info_perm">Kazakh pangram?:</span>
+											<span>
+												Мұны һәм немесе тіпті дар эс салам шайға ағып ең түрде бірге актёр хош чара қартаю щетка аварияға өте жатқан француз въезд сухость құймаларын жей
+											</span>
+											<hr>
+										</div>
+									</figure>
+								</div>
+							</div>
+						</div>
+						<div class="content">
+							<div class="fonts">
+								<div class="font">
+									<figure>
+										<div class="sample M L XL" spellcheck="false" style="font-family: 'AdventProSeC_reg';">
 											<span class="info_perm">Russian pangram:</span>
 											<span>
 												Съешь ещё этих мягких французских булок да выпей же чаю
