--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#x61;&#105;l&#x74;&#111;&#58;&#115;&#117;&#112;&#112;&#x6f;&#114;&#x74;&#64;&#118;&#105;&#118;&#x61;&#114;a&#x64;&#x6f;&#46;&#99;&#111;&#109;">&#115;&#117;&#112;&#112;&#x6f;&#114;&#x74;&#64;&#118;&#105;&#118;&#x61;&#114;a&#x64;&#x6f;&#46;&#99;&#111;&#109;</a></li>
+<li>VivaRado <a href="&#x6d;&#97;&#105;&#x6c;&#x74;&#111;&#x3a;&#115;&#117;&#x70;p&#111;&#114;&#116;&#x40;&#x76;&#105;&#x76;&#x61;&#114;&#97;&#100;&#111;&#46;&#99;&#x6f;&#109;">&#115;&#117;&#x70;p&#111;&#114;&#116;&#x40;&#x76;&#105;&#x76;&#x61;&#114;&#97;&#100;&#111;&#46;&#99;&#x6f;&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="m&#97;&#x69;&#x6c;&#116;o&#x3a;&#x6d;&#x6a;&#108;&#x61;&#x67;&#x61;&#116;&#116;&#117;&#116;a&#64;&#103;&#109;&#97;&#105;&#108;&#x2e;&#99;&#111;&#x6d;">&#x6d;&#x6a;&#108;&#x61;&#x67;&#x61;&#116;&#116;&#117;&#116;a&#64;&#103;&#109;&#97;&#105;&#108;&#x2e;&#99;&#111;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#97;&#x69;&#x6c;&#x74;&#x6f;&#58;&#x6d;j&#108;&#x61;&#103;&#97;&#x74;&#116;&#x75;&#x74;&#x61;&#64;&#103;&#109;&#x61;&#105;&#x6c;&#46;&#99;&#x6f;&#x6d;">&#x6d;j&#108;&#x61;&#103;&#97;&#x74;&#116;&#x75;&#x74;&#x61;&#64;&#103;&#109;&#x61;&#105;&#x6c;&#46;&#99;&#x6f;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1694,7 +1694,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#97;&#105;&#x6c;&#x74;o:&#x73;&#117;&#112;&#x70;&#111;&#x72;&#x74;&#x40;&#x76;&#105;&#118;&#x61;&#x72;a&#100;o&#x2e;c&#x6f;&#x6d;">&#x73;&#117;&#112;&#x70;&#111;&#x72;&#x74;&#x40;&#x76;&#105;&#118;&#x61;&#x72;a&#100;o&#x2e;c&#x6f;&#x6d;</a></li>
+<li><a href="&#x6d;&#97;i&#108;&#116;o&#x3a;s&#117;&#x70;&#112;&#111;&#114;&#116;&#64;&#x76;&#x69;&#118;&#x61;&#x72;ad&#x6f;&#x2e;&#x63;o&#x6d;">s&#117;&#x70;&#112;&#111;&#114;&#116;&#64;&#x76;&#x69;&#118;&#x61;&#x72;ad&#x6f;&#x2e;&#x63;o&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
