--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.016 | 2019/05/14</title>
+		<title>VRD | Advent | 3.016 | 2019/05/15</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#97;&#105;&#108;&#x74;&#111;&#58;&#115;&#117;&#x70;p&#x6f;&#114;&#116;&#x40;&#x76;&#105;&#118;&#x61;&#x72;&#97;&#x64;&#x6f;&#x2e;&#99;&#x6f;&#x6d;">&#115;&#117;&#x70;p&#x6f;&#114;&#116;&#x40;&#x76;&#105;&#118;&#x61;&#x72;&#97;&#x64;&#x6f;&#x2e;&#99;&#x6f;&#x6d;</a></li>
+<li>VivaRado <a href="&#109;&#97;&#105;&#108;t&#x6f;&#x3a;&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#64;&#118;&#x69;&#118;&#97;&#114;&#97;&#x64;&#111;&#46;c&#111;&#x6d;">&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#64;&#118;&#x69;&#118;&#97;&#114;&#97;&#x64;&#111;&#46;c&#111;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#97;&#x69;&#x6c;&#116;&#x6f;:&#x6d;&#106;&#108;&#x61;&#103;&#97;&#116;&#116;u&#x74;&#97;&#x40;&#x67;&#x6d;&#x61;&#x69;&#108;&#46;&#x63;&#x6f;&#x6d;">&#x6d;&#106;&#108;&#x61;&#103;&#97;&#116;&#116;u&#x74;&#97;&#x40;&#x67;&#x6d;&#x61;&#x69;&#108;&#46;&#x63;&#x6f;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#x61;&#105;&#x6c;&#116;&#x6f;&#x3a;&#x6d;&#106;&#108;&#x61;&#103;&#x61;&#116;&#116;&#x75;&#x74;&#x61;&#x40;&#103;&#109;&#x61;i&#108;.&#x63;&#x6f;&#109;">&#x6d;&#106;&#108;&#x61;&#103;&#x61;&#116;&#116;&#x75;&#x74;&#x61;&#x40;&#103;&#109;&#x61;i&#108;.&#x63;&#x6f;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1432,6 +1432,7 @@ ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29
             MO reg Complete:                                         done, des68, 2019-05-11,  8h
         3 SeC MO 2 bld:                                            active, des66, after des65, 3d
             MO bld 24/39 Capitals:                                   done, des69, 2019-05-14,  4h
+            MO bld All Capitals:                                     done, des70, 2019-05-15,  2h
 
     ADV-0003-0008-0001-0001 SeC MG:                                        des32, after des58, 3d
         3 SeC MG 1 reg_it:                                                 des42, after des58, 1d
@@ -1695,7 +1696,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#97;&#105;&#108;&#116;&#111;&#x3a;&#x73;&#x75;&#112;&#x70;&#111;rt&#64;&#x76;&#x69;&#x76;&#97;&#114;a&#x64;&#x6f;&#46;&#99;&#x6f;&#109;">&#x73;&#x75;&#112;&#x70;&#111;rt&#64;&#x76;&#x69;&#x76;&#97;&#114;a&#x64;&#x6f;&#46;&#99;&#x6f;&#109;</a></li>
+<li><a href="&#x6d;&#x61;&#105;&#x6c;&#116;&#111;&#58;&#x73;&#x75;&#112;&#x70;o&#x72;&#116;&#x40;&#118;&#105;&#x76;&#x61;&#x72;a&#100;&#111;&#x2e;&#99;&#111;&#109;">&#x73;&#x75;&#112;&#x70;o&#x72;&#116;&#x40;&#118;&#105;&#x76;&#x61;&#x72;a&#100;&#111;&#x2e;&#99;&#111;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
