--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.016 | 2019/05/15</title>
+		<title>VRD | Advent | 3.017 | 2019/05/15</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#97;&#105;l&#x74;&#111;&#58;s&#117;&#x70;&#112;&#x6f;&#x72;&#116;&#x40;&#x76;&#105;&#x76;&#97;&#114;&#x61;&#100;&#x6f;&#x2e;&#99;&#111;&#x6d;">s&#117;&#x70;&#112;&#x6f;&#x72;&#116;&#x40;&#x76;&#105;&#x76;&#97;&#114;&#x61;&#100;&#x6f;&#x2e;&#99;&#111;&#x6d;</a></li>
+<li>VivaRado <a href="&#x6d;a&#x69;&#108;&#116;&#111;&#x3a;&#115;&#x75;&#x70;&#112;&#111;&#x72;&#116;&#x40;&#118;i&#x76;&#x61;&#114;&#97;&#100;&#x6f;.&#99;&#111;&#x6d;">&#115;&#x75;&#x70;&#112;&#111;&#x72;&#116;&#x40;&#118;i&#x76;&#x61;&#114;&#97;&#100;&#x6f;.&#99;&#111;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#97;&#x69;&#108;&#116;&#111;&#58;&#109;&#106;&#x6c;&#x61;&#103;a&#116;&#116;&#x75;&#116;&#97;&#x40;&#103;&#109;&#x61;&#105;&#108;&#x2e;&#x63;&#111;&#x6d;">&#109;&#106;&#x6c;&#x61;&#103;a&#116;&#116;&#x75;&#116;&#97;&#x40;&#103;&#109;&#x61;&#105;&#108;&#x2e;&#x63;&#111;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#x61;&#x69;&#108;&#x74;o:m&#x6a;&#108;&#x61;&#x67;&#97;&#116;&#116;u&#x74;&#x61;&#64;&#103;&#x6d;&#97;&#105;&#108;&#x2e;&#x63;o&#109;">m&#x6a;&#108;&#x61;&#x67;&#97;&#116;&#116;u&#x74;&#x61;&#64;&#103;&#x6d;&#97;&#105;&#108;&#x2e;&#x63;o&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1696,7 +1696,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#97;&#105;&#108;&#x74;&#111;&#x3a;&#115;&#x75;&#112;p&#x6f;&#x72;&#x74;&#x40;&#x76;i&#118;&#x61;&#x72;&#97;&#x64;o&#x2e;&#99;&#x6f;&#109;">&#115;&#x75;&#112;p&#x6f;&#x72;&#x74;&#x40;&#x76;i&#118;&#x61;&#x72;&#97;&#x64;o&#x2e;&#99;&#x6f;&#109;</a></li>
+<li><a href="m&#x61;&#x69;&#x6c;&#116;&#111;&#58;&#x73;&#x75;&#112;&#x70;&#x6f;&#114;&#116;&#64;&#118;&#x69;&#118;&#x61;r&#97;&#x64;&#x6f;&#46;&#99;&#x6f;m">&#x73;&#x75;&#112;&#x70;&#x6f;&#114;&#116;&#64;&#118;&#x69;&#118;&#x61;r&#97;&#x64;&#x6f;&#46;&#99;&#x6f;m</a></li>
 </ul></li>
 </ul></li>
 </ul>
