bld MO integ. schedule extend

--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#x61;i&#108;&#116;o&#x3a;&#115;&#x75;&#112;p&#x6f;&#114;t&#64;&#x76;i&#118;&#97;&#114;a&#x64;&#x6f;&#46;&#x63;&#x6f;&#109;">&#115;&#x75;&#112;p&#x6f;&#114;t&#64;&#x76;i&#118;&#97;&#114;a&#x64;&#x6f;&#46;&#x63;&#x6f;&#109;</a></li>
+<li>VivaRado <a href="&#x6d;a&#105;&#x6c;&#x74;&#x6f;:&#115;&#117;&#112;&#x70;&#111;&#x72;&#x74;&#x40;&#x76;&#x69;&#x76;&#x61;&#x72;&#97;&#100;o.&#x63;&#x6f;&#x6d;">&#115;&#117;&#112;&#x70;&#111;&#x72;&#x74;&#x40;&#x76;&#x69;&#x76;&#x61;&#x72;&#97;&#100;o.&#x63;&#x6f;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#97;&#105;&#108;&#116;&#x6f;:&#x6d;j&#x6c;&#x61;&#103;&#x61;&#x74;&#x74;&#x75;&#116;&#x61;&#64;&#x67;&#109;ai&#108;&#46;&#99;&#111;&#109;">&#x6d;j&#x6c;&#x61;&#103;&#x61;&#x74;&#x74;&#x75;&#116;&#x61;&#64;&#x67;&#109;ai&#108;&#46;&#99;&#111;&#109;</a></li>
+<li>Michael LaGattuta <a href="m&#97;&#x69;&#108;t&#x6f;&#x3a;&#x6d;j&#x6c;&#97;&#103;&#x61;&#x74;&#x74;&#x75;&#x74;a&#x40;&#x67;&#109;&#97;&#x69;&#108;&#46;&#99;&#111;&#109;">&#x6d;j&#x6c;&#97;&#103;&#x61;&#x74;&#x74;&#x75;&#x74;a&#x40;&#x67;&#109;&#97;&#x69;&#108;&#46;&#99;&#111;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1430,7 +1430,7 @@ ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29
             MO reg 16/39 Capitals:                                   done, des59, 2019-05-09,  6h
             MO reg Capitals:                                         done, des67, 2019-05-10,  6h
             MO reg Complete:                                         done, des68, 2019-05-11,  8h
-        3 SeC MO 2 bld:                                            active, des66, after des65, 3d
+        3 SeC MO 2 bld:                                            active, des66, after des65, 4d
             MO bld 24/39 Capitals:                                   done, des69, 2019-05-14,  4h
             MO bld All Capitals:                                     done, des70, 2019-05-15,  2h
 
@@ -1696,7 +1696,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#x61;&#105;&#108;&#116;&#111;&#x3a;&#x73;&#117;&#x70;&#112;&#111;&#x72;t&#64;&#118;&#105;&#118;&#97;&#114;&#x61;d&#111;&#x2e;&#x63;&#x6f;&#109;">&#x73;&#117;&#x70;&#112;&#111;&#x72;t&#64;&#118;&#105;&#118;&#97;&#114;&#x61;d&#111;&#x2e;&#x63;&#x6f;&#109;</a></li>
+<li><a href="&#x6d;&#x61;&#x69;&#x6c;&#x74;&#x6f;&#x3a;&#x73;&#117;&#x70;&#112;&#x6f;&#114;t&#x40;&#118;&#x69;&#x76;&#x61;&#114;&#x61;&#100;&#111;&#x2e;&#x63;&#x6f;&#109;">&#x73;&#117;&#x70;&#112;&#x6f;&#114;t&#x40;&#118;&#x69;&#x76;&#x61;&#114;&#x61;&#100;&#111;&#x2e;&#x63;&#x6f;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
