bld MO integ. schedule extend

--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#97;&#105;&#108;&#116;&#x6f;&#x3a;s&#117;&#112;&#112;&#111;&#x72;t&#64;&#x76;&#x69;&#118;&#97;&#x72;&#x61;&#100;&#111;.&#x63;&#111;&#x6d;">s&#117;&#112;&#112;&#111;&#x72;t&#64;&#x76;&#x69;&#118;&#97;&#x72;&#x61;&#100;&#111;.&#x63;&#111;&#x6d;</a></li>
+<li>VivaRado <a href="&#109;&#x61;&#x69;&#x6c;&#116;o&#58;&#x73;&#x75;&#112;&#x70;&#x6f;&#114;&#116;&#64;&#x76;&#105;&#118;&#97;&#x72;&#97;&#100;&#x6f;&#46;c&#x6f;&#x6d;">&#x73;&#x75;&#112;&#x70;&#x6f;&#114;&#116;&#64;&#x76;&#105;&#118;&#97;&#x72;&#97;&#100;&#x6f;&#46;c&#x6f;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#x61;&#105;&#108;&#116;o&#58;&#x6d;&#x6a;&#108;&#x61;&#x67;&#x61;&#116;&#x74;ut&#x61;&#x40;&#103;&#109;&#97;&#105;&#x6c;&#x2e;&#99;&#x6f;&#x6d;">&#x6d;&#x6a;&#108;&#x61;&#x67;&#x61;&#116;&#x74;ut&#x61;&#x40;&#103;&#109;&#97;&#105;&#x6c;&#x2e;&#99;&#x6f;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="m&#97;&#105;&#x6c;&#116;&#111;&#58;m&#106;l&#97;&#103;a&#x74;&#x74;&#x75;&#x74;&#x61;&#x40;&#103;&#x6d;&#x61;&#105;l&#46;&#x63;&#111;&#109;">m&#106;l&#97;&#103;a&#x74;&#x74;&#x75;&#x74;&#x61;&#x40;&#103;&#x6d;&#x61;&#105;l&#46;&#x63;&#111;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1408,7 +1408,7 @@ ADV-0004-0008-0001 Advent 4 Script Extension Cyrillic (SeC) Planning:      des28
 #
 section Advent 3 SE Cyrillic
 
-ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29, 2019-04-27, 21d
+ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29, 2019-04-27, 22d
     ADV-0003-0008-0001-0001 Advent SeC MO:                           done, des30, 2019-04-27,  9d
         SeC MO 1 reg (04/27 to 04/30):                               done, des39, 2019-04-27,  3d
             MO reg Capital:                                          done, des31, 2019-04-27,  5h
@@ -1696,7 +1696,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#x61;&#x69;&#108;&#x74;o&#58;&#x73;&#x75;&#x70;&#x70;&#111;&#114;&#116;&#x40;&#x76;&#105;&#118;ar&#97;&#100;&#111;&#x2e;&#99;&#x6f;&#x6d;">&#x73;&#x75;&#x70;&#x70;&#111;&#114;&#116;&#x40;&#x76;&#105;&#118;ar&#97;&#100;&#111;&#x2e;&#99;&#x6f;&#x6d;</a></li>
+<li><a href="m&#x61;&#105;&#x6c;&#116;o:&#115;&#117;&#112;&#x70;&#x6f;&#114;&#116;&#x40;&#x76;&#105;&#118;&#97;&#x72;&#x61;d&#x6f;&#x2e;&#99;&#x6f;&#109;">&#115;&#117;&#112;&#x70;&#x6f;&#114;&#116;&#x40;&#x76;&#105;&#118;&#97;&#x72;&#x61;d&#x6f;&#x2e;&#99;&#x6f;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
