bld_it MG done / vup / plan update

--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#x61;&#105;&#108;&#x74;&#x6f;&#58;&#x73;&#117;&#x70;&#x70;&#x6f;&#x72;&#116;&#x40;&#x76;&#105;&#x76;&#97;&#114;&#97;&#100;&#x6f;&#x2e;&#x63;o&#x6d;">&#x73;&#117;&#x70;&#x70;&#x6f;&#x72;&#116;&#x40;&#x76;&#105;&#x76;&#97;&#114;&#97;&#100;&#x6f;&#x2e;&#x63;o&#x6d;</a></li>
+<li>VivaRado <a href="&#109;&#97;&#x69;lt&#x6f;&#58;&#115;&#x75;&#x70;&#112;or&#x74;&#64;&#118;&#105;&#x76;&#97;&#x72;&#x61;d&#x6f;&#46;&#x63;&#111;&#x6d;">&#115;&#x75;&#x70;&#112;or&#x74;&#64;&#118;&#105;&#x76;&#97;&#x72;&#x61;d&#x6f;&#46;&#x63;&#111;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#97;&#x69;l&#116;&#111;&#58;&#x6d;&#106;&#x6c;&#x61;g&#x61;&#116;t&#117;t&#97;&#x40;&#x67;ma&#105;&#108;&#46;&#99;&#x6f;&#x6d;">&#x6d;&#106;&#x6c;&#x61;g&#x61;&#116;t&#117;t&#97;&#x40;&#x67;ma&#105;&#108;&#46;&#99;&#x6f;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#x61;ilto&#58;&#x6d;&#x6a;&#108;&#97;&#x67;a&#x74;&#x74;&#x75;&#116;&#x61;&#64;&#103;m&#97;i&#108;&#x2e;&#x63;&#x6f;&#109;">&#x6d;&#x6a;&#108;&#97;&#x67;a&#x74;&#x74;&#x75;&#116;&#x61;&#64;&#103;m&#97;i&#108;&#x2e;&#x63;&#x6f;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1697,7 +1697,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#97;&#105;&#108;&#116;&#111;&#58;&#115;&#x75;&#x70;&#x70;&#111;&#x72;&#x74;&#64;&#x76;i&#x76;&#97;&#x72;a&#100;&#111;&#x2e;&#99;&#x6f;&#109;">&#115;&#x75;&#x70;&#x70;&#111;&#x72;&#x74;&#64;&#x76;i&#x76;&#97;&#x72;a&#100;&#111;&#x2e;&#99;&#x6f;&#109;</a></li>
+<li><a href="&#x6d;&#x61;il&#x74;&#111;&#x3a;&#x73;&#x75;&#x70;&#x70;&#111;&#114;&#x74;&#64;&#x76;&#105;&#118;&#97;&#114;&#97;&#x64;&#111;&#46;&#x63;&#111;&#x6d;">&#x73;&#x75;&#x70;&#x70;&#111;&#114;&#x74;&#64;&#x76;&#105;&#118;&#97;&#114;&#97;&#x64;&#111;&#46;&#x63;&#111;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
