thn_it MG done / vup / plan update

--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.020 | 2019/05/19</title>
+		<title>VRD | Advent | 3.021 | 2019/05/19</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#97;&#x69;lt&#x6f;&#58;&#115;&#x75;&#x70;&#112;or&#x74;&#64;&#118;&#105;&#x76;&#97;&#x72;&#x61;d&#x6f;&#46;&#x63;&#111;&#x6d;">&#115;&#x75;&#x70;&#112;or&#x74;&#64;&#118;&#105;&#x76;&#97;&#x72;&#x61;d&#x6f;&#46;&#x63;&#111;&#x6d;</a></li>
+<li>VivaRado <a href="&#109;a&#105;&#x6c;&#x74;&#x6f;&#58;&#x73;&#117;p&#112;&#111;&#x72;&#x74;&#x40;&#x76;&#105;&#118;&#x61;&#x72;&#x61;&#x64;&#x6f;&#x2e;&#99;&#111;&#109;">&#x73;&#117;p&#112;&#111;&#x72;&#x74;&#x40;&#x76;&#105;&#118;&#x61;&#x72;&#x61;&#x64;&#x6f;&#x2e;&#99;&#111;&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#x61;ilto&#58;&#x6d;&#x6a;&#108;&#97;&#x67;a&#x74;&#x74;&#x75;&#116;&#x61;&#64;&#103;m&#97;i&#108;&#x2e;&#x63;&#x6f;&#109;">&#x6d;&#x6a;&#108;&#97;&#x67;a&#x74;&#x74;&#x75;&#116;&#x61;&#64;&#103;m&#97;i&#108;&#x2e;&#x63;&#x6f;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#97;&#x69;l&#116;&#x6f;&#x3a;&#x6d;&#x6a;&#108;&#x61;g&#97;&#116;&#116;&#117;&#x74;a&#64;&#103;&#109;&#x61;&#105;&#108;.c&#x6f;&#x6d;">&#x6d;&#x6a;&#108;&#x61;g&#97;&#116;&#116;&#117;&#x74;a&#64;&#103;&#109;&#x61;&#105;&#108;.c&#x6f;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1438,7 +1438,7 @@ ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29
     ADV-0003-0008-0001-0001 SeC MG:                                        des32, after des58, 3d
         3 SeC MG 1 reg_it:                                           done, des42, after des58, 1d
         3 SeC MG 2 bld_it:                                           done, des43, after des42, 1d
-        3 SeC MG 3 thn_it:                                                 des44, after des43, 1d
+        3 SeC MG 3 thn_it:                                           done, des44, after des43, 1d
 #
 section 4 ME Latin and Greek
 
@@ -1697,7 +1697,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#x61;il&#x74;&#111;&#x3a;&#x73;&#x75;&#x70;&#x70;&#111;&#114;&#x74;&#64;&#x76;&#105;&#118;&#97;&#114;&#97;&#x64;&#111;&#46;&#x63;&#111;&#x6d;">&#x73;&#x75;&#x70;&#x70;&#111;&#114;&#x74;&#64;&#x76;&#105;&#118;&#97;&#114;&#97;&#x64;&#111;&#46;&#x63;&#111;&#x6d;</a></li>
+<li><a href="&#x6d;&#97;&#x69;&#108;&#116;&#111;&#x3a;&#x73;&#x75;&#112;&#x70;o&#114;&#x74;&#x40;&#118;&#x69;&#x76;&#97;&#x72;&#97;&#100;&#x6f;&#x2e;&#99;&#x6f;&#x6d;">&#x73;&#x75;&#112;&#x70;o&#114;&#x74;&#x40;&#118;&#x69;&#x76;&#97;&#x72;&#97;&#100;&#x6f;&#x2e;&#99;&#x6f;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
