--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#x61;&#x69;&#108;t&#x6f;&#x3a;&#x73;&#x75;&#x70;&#x70;or&#x74;&#x40;&#x76;&#x69;&#x76;&#97;&#x72;&#97;&#x64;o&#x2e;&#99;o&#x6d;">&#x73;&#x75;&#x70;&#x70;or&#x74;&#x40;&#x76;&#x69;&#x76;&#97;&#x72;&#97;&#x64;o&#x2e;&#99;o&#x6d;</a></li>
+<li>VivaRado <a href="&#109;&#x61;&#x69;&#x6c;&#x74;&#111;&#58;&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#64;&#x76;&#x69;va&#114;&#97;&#x64;&#111;&#46;&#99;&#x6f;&#109;">&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#64;&#x76;&#x69;va&#114;&#97;&#x64;&#111;&#46;&#99;&#x6f;&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#97;&#x69;&#x6c;&#x74;o&#58;&#109;&#106;&#108;&#97;&#103;&#97;&#x74;&#x74;&#117;&#116;&#x61;&#64;&#x67;&#x6d;&#97;&#105;&#x6c;&#46;&#x63;&#111;&#x6d;">&#109;&#106;&#108;&#97;&#103;&#97;&#x74;&#x74;&#117;&#116;&#x61;&#64;&#x67;&#x6d;&#97;&#105;&#x6c;&#46;&#x63;&#111;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#x61;&#x69;&#108;&#116;&#111;&#x3a;&#109;&#106;&#108;&#x61;&#x67;&#97;&#116;&#116;u&#116;&#x61;&#64;&#x67;&#x6d;&#x61;&#105;&#108;&#x2e;&#99;&#111;&#109;">&#109;&#106;&#108;&#x61;&#x67;&#97;&#116;&#116;u&#116;&#x61;&#64;&#x67;&#x6d;&#x61;&#105;&#108;&#x2e;&#99;&#111;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1439,6 +1439,7 @@ ADV-0003-0008-0001 Advent 3 SE Cyrillic:                             crit, des29
         3 SeC MG 1 reg_it:                                           done, des42, after des58, 1d
         3 SeC MG 2 bld_it:                                           done, des43, after des42, 1d
         3 SeC MG 3 thn_it:                                           done, des44, after des43, 1d
+        SeC MG fixes:                                                      des72, after des44, 1d
 #
 section 4 ME Latin and Greek
 
@@ -1697,7 +1698,7 @@ SeC Capitals, SeC SmallCase MO and MG</li>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;a&#x69;&#x6c;&#116;&#x6f;:&#115;&#117;p&#x70;&#x6f;&#x72;&#x74;&#x40;&#118;&#x69;&#x76;&#97;&#114;&#x61;&#x64;&#111;&#46;&#99;&#x6f;m">&#115;&#117;p&#x70;&#x6f;&#x72;&#x74;&#x40;&#118;&#x69;&#x76;&#97;&#114;&#x61;&#x64;&#111;&#46;&#99;&#x6f;m</a></li>
+<li><a href="&#x6d;a&#x69;&#108;&#116;&#x6f;&#58;&#x73;&#117;&#x70;&#x70;&#x6f;&#x72;&#x74;&#x40;&#x76;&#x69;&#x76;&#97;&#x72;&#97;&#x64;o.&#x63;&#x6f;&#109;">&#x73;&#117;&#x70;&#x70;&#x6f;&#x72;&#x74;&#x40;&#x76;&#x69;&#x76;&#97;&#x72;&#97;&#x64;o.&#x63;&#x6f;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
